builder/tests/16-path-attribute.stderr
error: expected `builder(each = "...")`
 --> tests/16-path-attribute.rs:5:7
  |
5 |     #[builder]
  |       ^^^^^^^
